# make_game_with_chatGPT

./: .gitignore  README.md  pyproject.toml  test_env.py
.github/workflows/: python-app.yml
othello/: README.md  env.py  environment.py  othello.py  test_othello.py
src/othello/: __init__.py  ai.py  env.py  evaluate_qlearning.py  game.py  main.py  train_qlearning.py
tests/: test_ai.py  test_othello.py  test_q_learning.py
